Moves gist to source code

--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.0.17",
     "@tauri-apps/api": "^1.2.0",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.2.3",
