--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.13",
     "@heroicons/vue": "^2.0.17",
-    "@tauri-apps/api": "^1.2.0",
+    "@tauri-apps/api": "^1.3.0",
+    "@vueuse/core": "^10.1.2",
     "pinia": "^2.0.35",
     "vue": "^3.2.45",
     "vue-router": "4"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.2.3",
+    "@tauri-apps/cli": "^1.3.0",
     "@types/node": "^18.7.10",
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.14",
