--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2021"
 tauri-build = { version = "1.2", features = [] }
 
 [dependencies]
-tauri = { version = "1.2", features = ["shell-open", "updater", "window-all"] }
+tauri = { version = "1.2", features = ["fs-all", "path-all", "shell-open", "updater", "window-all"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
